Finished kNN section

--- a/Binary Relevance Models/Binary_Relevance_Classification.ipynb
+++ b/Binary Relevance Models/Binary_Relevance_Classification.ipynb
@@ -20,12 +20,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np \n",
     "import scipy\n",
+    "import random\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "from skmultilearn.adapt import MLkNN\n",
@@ -37,7 +38,7 @@
     "from sklearn import metrics\n",
     "from joblib import dump, load\n",
     "import sys\n",
-    "sys.path.append('../ThresholdFunctionLearning')    ## Append path to the ThresholdFunctionLearning directory to the interpreters\n",
+    "sys.path.append('../../ThresholdFunctionLearning')    ## Append path to the ThresholdFunctionLearning directory to the interpreters\n",
     "                                                   ## search path\n",
     "from threshold_learning import predict_test_labels_binary    ## Import the 'predict_test_labels_binary()' function \n",
     "import os\n",
@@ -53,12 +54,14 @@
     "\n",
     "Arguably, the most intuitive among multilabel modeling approaches is what's referred to as \"binary relevance\". This approach works by decomposing the multi-label learning task into a number of independent binary learning tasks (one per class label) (Zhang et al. [2018]). Binary Relevance methods are often criticized in the literature because of their label independence assumption, producing a potential weakness of ignoring correlations among labels (Luaces et al. [2012]). In this notebook, we'll explore binary relevance models built using differenct base classifiers. Later, in other notebooks, we'll train more novel approaches for comparison.\n",
     "\n",
-    "Each of the models will be trained using both the separable principal component scores and the autoencoder encodings derived in 'Preprocessing and Dimension Reduction/tfidf_Dimension_Reduction.ipynb'. Below, we'll load the data and compute one baseline for validating our models according to Hamming Loss. Namely, since our labels are sparse, we'll compute the validation Hamming Loss associated with a constant zero classifier."
+    "Each of our models will be evaluated using the default constant threshold function of $t(x) \\equiv 0.5$ in addition to using a learned threshold function. Learning threshold functions has the advantage of allowing for different instances to possess different thresholds. Thsi can be useful, when a model either cannot consistenty separate true from false labels around a constant value OR when sufficient training is resource intensive. In many instances, a model may learn to separate true from false labels earlier in the training process than it learns to separate about a constant threshold.\n",
+    "\n",
+    "Additionally, each of the models will be trained using both the separable principal component scores and the autoencoder encodings derived in 'Preprocessing and Dimension Reduction/tfidf_Dimension_Reduction.ipynb'. Below, we'll load the data and compute one baseline for validating our models according to Hamming Loss. Namely, since our labels are sparse, we'll compute the validation Hamming Loss associated with a constant zero classifier."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +91,7 @@
        "0.013779397151374627"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -153,11 +156,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "%%capture\n",
+    "random.seed(123)\n",
     "n_neighbors_list = list(range(3, 16, 3))\n",
     "n_neighbors_list.insert(0, 1)\n",
     "parameters_br = {'n_neighbors': n_neighbors_list}  \n",
@@ -172,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +185,7 @@
        "['kNN Based/clf_br_gridSearch_object']"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -287,6 +291,86 @@
     "df_CV_br[ \"Mean out-of-bag Hamming loss\"] = clf_br.cv_results_[\"mean_test_score\"]\n",
     "display(df_CV_br)\n",
     "print(f\"Best parameters: {best_parameters_br}, Best mean out-of-bag Hamming loss: {np.min(clf_br.cv_results_['mean_test_score'])}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best parameters: The Hamming loss training data is 0.004\n",
+      "Best parameters: The Hamming loss test data is 0.005\n",
+      "Best parameters with threshold function learning: Hamming loss Test set is 0.009355562916344632\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Threshold learning using the best parameters from the cross-validated grid search \n",
+    "classifier_best_br = BinaryRelevance(\n",
+    "    classifier = kNN(n_neighbors = best_parameters_br['n_neighbors'])\n",
+    ")\n",
+    "\n",
+    "classifier_best_br.fit(X_sepPCs_train, Y_train)\n",
+    "#Y_train_pred_best_br = classifier_best_br.predict(X_sepPCs_train) # -- These 'predict()' steps can be time costly.\n",
+    "#Y_train_pred_best_array_br = Y_train_pred_best_br.toarray()          # Instead, load the predictions below\n",
+    "#Y_test_pred_best_br = classifier_best_br.predict(X_sepPCs_test)\n",
+    "#Y_test_pred_best_array_br = Y_test_pred_best_br.toarray()\n",
+    "\n",
+    "npzfile = np.load(\"kNN Based/kNN_bestModel_preds.npz\", allow_pickle = True)\n",
+    "Y_train_pred_best_array_br = npzfile[\"Y_train_pred_best_array_br\"]\n",
+    "Y_test_pred_best_array_br = npzfile[\"Y_test_pred_best_array_br\"]\n",
+    "Y_train_pred_proba_array = npzfile[\"Y_train_pred_proba_array\"]\n",
+    "Y_test_pred_proba_array = npzfile[\"Y_test_pred_proba_array\"]\n",
+    "\n",
+    "threshold_function = load(\"kNN Based/learned_threshold_function.joblib\")\n",
+    "\n",
+    "print (f\"Best parameters: The Hamming loss training data is {metrics.hamming_loss(Y_train, Y_train_pred_best_array_br):.3f}\")\n",
+    "print (f\"Best parameters: The Hamming loss test data is {metrics.hamming_loss(Y_test, Y_test_pred_best_array_br):.3f}\")\n",
+    "\n",
+    "# Learn a threshold function\n",
+    "#Y_train_pred_proba = classifier_best_br.predict_proba(X_sepPCs_train)\n",
+    "#Y_train_pred_proba_array = Y_train_pred_proba.toarray()\n",
+    "#Y_test_pred_proba = classifier_best_br.predict_proba(X_sepPCs_test)\n",
+    "#Y_test_pred_proba_array = Y_test_pred_proba.toarray()\n",
+    "\n",
+    "t_range = (0, 1)\n",
+    "\n",
+    "#test_labels_binary, threshold_function = predict_test_labels_binary(Y_train_pred_proba_array, Y_train, Y_test_pred_proba_array, t_range)\n",
+    "print (f\"Best parameters with threshold function learning: Hamming loss Test set is {metrics.hamming_loss(Y_test, test_labels_binary)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['kNN Based/learned_threshold_function.joblib']"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## (CAUTION: DO NOT OVERWRITE EXISTING FILES) -- Save the kNN based best model predictions with & without a learned threshold\n",
+    "##                                               and save the learned threshold\n",
+    "outfile = \"kNN Based/kNN_bestModel_preds.npz\"\n",
+    "#np.savez_compressed(outfile, Y_train_pred_best_array_br = Y_train_pred_best_array_br,\n",
+    "#                             Y_test_pred_best_array_br = Y_test_pred_best_array_br,\n",
+    "#                             Y_train_pred_proba_array = Y_train_pred_proba_array,\n",
+    "#                             Y_test_pred_proba_array = Y_test_pred_proba_array,\n",
+    "#                             test_labels_binary = test_labels_binary)\n",
+    "\n",
+    "outfile = \"kNN Based/learned_threshold_function.joblib\"\n",
+    "#dump(threshold_function, outfile, compress = 3) "
    ]
   },
   {
