altered path to threshold_learning

--- a/Binary Relevance Models/kNN Based/kNN_Based_Models.ipynb
+++ b/Binary Relevance Models/kNN Based/kNN_Based_Models.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
     "from sklearn import metrics\n",
     "from joblib import dump, load\n",
     "import sys\n",
-    "sys.path.append('../../../ThresholdFunctionLearning')    ## Append path to the ThresholdFunctionLearning directory to the interpreters\n",
+    "sys.path.append('../../ThresholdFunctionLearning')    ## Append path to the ThresholdFunctionLearning directory to the interpreters\n",
     "                                                   ## search path\n",
     "from threshold_learning import predict_test_labels_binary    ## Import the 'predict_test_labels_binary()' function \n",
     "import os\n",
