Started Autoencoder sections

--- a/Binary Relevance Models/kNN Based/kNN_Based_Models.ipynb
+++ b/Binary Relevance Models/kNN Based/kNN_Based_Models.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,8 +128,8 @@
     "\n",
     "br_classifier.fit(X_sepPCs_train, Y_train)\n",
     "\n",
-    "#br_train_preds = br_classifier.predict(X_sepPCs_train).toarray() -- Making predictions takes some time. \n",
-    "#br_test_preds = br_classifier.predict(X_sepPCs_test).toarray()      Instead, load the predictions from 'kNN_based_preds.npz', on next line.\n",
+    "#br_train_preds = br_classifier.predict(X_sepPCs_train).toarray() #-- Making predictions takes some time. \n",
+    "#br_test_preds = br_classifier.predict(X_sepPCs_test).toarray()      #Instead, load the predictions from 'kNN_based_preds.npz', on next line.\n",
     "\n",
     "npzfile = npzfile = np.load(\"kNN_based_preds.npz\", allow_pickle = True)\n",
     "br_train_preds = npzfile[\"br_train_preds\"]\n",
@@ -378,6 +378,39 @@
    "metadata": {},
    "source": [
     "## ANN Autoencoder Featuers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Hamming loss for the training data is 0.005\n",
+      "The Hamming loss for the test data is 0.007\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Implement a binary relevance model using KNN classifiers (Naive approach to be compared with ML-KNN, later)\n",
+    "br_classifier = BinaryRelevance(\n",
+    "    classifier = kNN()\n",
+    ")\n",
+    "\n",
+    "br_classifier.fit(encoded_train, Y_train)\n",
+    "\n",
+    "br_train_preds = br_classifier.predict(encoded_train).toarray() #-- Making predictions takes some time. \n",
+    "br_test_preds = br_classifier.predict(encoded_test).toarray()      #Instead, load the predictions from 'kNN_based_preds.npz', on next line.\n",
+    "\n",
+    "#npzfile = npzfile = np.load(\"kNN_based_preds.npz\", allow_pickle = True)\n",
+    "#br_train_preds = npzfile[\"br_train_preds\"]\n",
+    "#br_test_preds = npzfile[\"br_test_preds\"]\n",
+    "\n",
+    "print (f\"The Hamming loss for the training data is {metrics.hamming_loss(Y_train, br_train_preds):.3f}\")\n",
+    "print (f\"The Hamming loss for the test data is {metrics.hamming_loss(Y_test, br_test_preds):.3f}\")"
    ]
   },
   {
