Finished training using encodings

--- a/Binary Relevance Models/kNN Based/kNN_Based_Models.ipynb
+++ b/Binary Relevance Models/kNN Based/kNN_Based_Models.ipynb
@@ -189,7 +189,7 @@
     }
    ],
    "source": [
-    "## (CAUTION: DO NOT OVERWRITE EXISTING FILES) -- Save the kNN based predictions\n",
+    "## (CAUTION: DO NOT OVERWRITE EXISTING FILES) -- Save the kNN based grid search object\n",
     "outfile = \"clf_br_gridSearch_object.joblib\"\n",
     "#dump(clf_br, outfile, compress = 3) "
    ]
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -400,17 +400,251 @@
     "    classifier = kNN()\n",
     ")\n",
     "\n",
-    "br_classifier.fit(encoded_train, Y_train)\n",
+    "#br_classifier.fit(encoded_train, Y_train)\n",
     "\n",
-    "br_train_preds = br_classifier.predict(encoded_train).toarray() #-- Making predictions takes some time. \n",
-    "br_test_preds = br_classifier.predict(encoded_test).toarray()      #Instead, load the predictions from 'kNN_based_preds.npz', on next line.\n",
+    "#br_train_preds_encoded = br_classifier.predict(encoded_train).toarray() #-- Making predictions takes some time. \n",
+    "#br_test_preds_encoded = br_classifier.predict(encoded_test).toarray()      #Instead, load the predictions from 'kNN_based_preds.npz', \n",
+    "                                                                            #on next line.\n",
     "\n",
-    "#npzfile = npzfile = np.load(\"kNN_based_preds.npz\", allow_pickle = True)\n",
-    "#br_train_preds = npzfile[\"br_train_preds\"]\n",
-    "#br_test_preds = npzfile[\"br_test_preds\"]\n",
+    "npzfile = npzfile = np.load(\"kNN_based_preds_encoded.npz\", allow_pickle = True)\n",
+    "br_train_preds_encoded = npzfile[\"br_train_preds_encoded\"]\n",
+    "br_test_preds_encoded = npzfile[\"br_test_preds_encoded\"]\n",
     "\n",
-    "print (f\"The Hamming loss for the training data is {metrics.hamming_loss(Y_train, br_train_preds):.3f}\")\n",
-    "print (f\"The Hamming loss for the test data is {metrics.hamming_loss(Y_test, br_test_preds):.3f}\")"
+    "print (f\"The Hamming loss for the training data is {metrics.hamming_loss(Y_train, br_train_preds_encoded):.3f}\")\n",
+    "print (f\"The Hamming loss for the test data is {metrics.hamming_loss(Y_test, br_test_preds_encoded):.3f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## (CAUTION: DO NOT OVERWRITE EXISTING FILES) -- Save the kNN based predictions\n",
+    "outfile = \"kNN_based_preds_encoded\"\n",
+    "#np.savez_compressed(outfile, br_train_preds_encoded = br_train_preds_encoded,\n",
+    "#                             br_test_preds_encoded = br_test_preds_encoded)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%capture\n",
+    "random.seed(123)\n",
+    "n_neighbors_list = list(range(3, 16, 3))\n",
+    "n_neighbors_list.insert(0, 1)\n",
+    "parameters_br = {'n_neighbors': n_neighbors_list}  \n",
+    "# By default, the Hamming loss as an option is not provided in the scoring string options. \n",
+    "# So, we first define a Hamming loss scorer and use that. \n",
+    "hamming_scorer = metrics.make_scorer(metrics.hamming_loss)\n",
+    "\n",
+    "#clf_br = GridSearchCV(kNN(), parameters_br, scoring = hamming_scorer, cv = 5, verbose = 1)\n",
+    "#clf_br.fit(encoded_train, Y_train) #-- To save time, load the pre-fit grid search object in the next line.\n",
+    "clf_br = load(\"clf_br_gridSearch_object_encodings.joblib\") "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['clf_br_gridSearch_object_encodings.joblib']"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## (CAUTION: DO NOT OVERWRITE EXISTING FILES) -- Save the kNN based grid search object\n",
+    "outfile = \"clf_br_gridSearch_object_encodings.joblib\"\n",
+    "#dump(clf_br, outfile, compress = 3) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Params</th>\n",
+       "      <th>Mean out-of-bag Hamming loss</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>{'n_neighbors': 1}</td>\n",
+       "      <td>0.010048</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>{'n_neighbors': 3}</td>\n",
+       "      <td>0.007742</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>{'n_neighbors': 6}</td>\n",
+       "      <td>0.007185</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>{'n_neighbors': 9}</td>\n",
+       "      <td>0.007211</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>{'n_neighbors': 12}</td>\n",
+       "      <td>0.007291</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>{'n_neighbors': 15}</td>\n",
+       "      <td>0.007344</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                Params  Mean out-of-bag Hamming loss\n",
+       "0   {'n_neighbors': 1}                      0.010048\n",
+       "1   {'n_neighbors': 3}                      0.007742\n",
+       "2   {'n_neighbors': 6}                      0.007185\n",
+       "3   {'n_neighbors': 9}                      0.007211\n",
+       "4  {'n_neighbors': 12}                      0.007291\n",
+       "5  {'n_neighbors': 15}                      0.007344"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best parameters: {'n_neighbors': 6}. Best mean out-of-bag Hamming loss: 0.007185214834925073\n"
+     ]
+    }
+   ],
+   "source": [
+    "best_index_br = np.argmin(clf_br.cv_results_[\"mean_test_score\"])\n",
+    "best_parameters_br = clf_br.cv_results_[\"params\"][best_index_br]\n",
+    "\n",
+    "df_CV_br = pd.DataFrame(columns=[\"Params\", \"Mean out-of-bag Hamming loss\"])\n",
+    "df_CV_br[\"Params\"] = clf_br.cv_results_[\"params\"]\n",
+    "df_CV_br[ \"Mean out-of-bag Hamming loss\"] = clf_br.cv_results_[\"mean_test_score\"]\n",
+    "display(df_CV_br)\n",
+    "print(f\"Best parameters: {best_parameters_br}. Best mean out-of-bag Hamming loss: {np.min(clf_br.cv_results_['mean_test_score'])}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best parameters: The Hamming loss training data is 0.006\n",
+      "Best parameters: The Hamming loss test data is 0.007\n",
+      "Best parameters with threshold function learning: Hamming loss Test set is 0.012366125648669537\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Threshold learning using the best parameters from the cross-validated grid search \n",
+    "classifier_best_br = BinaryRelevance(\n",
+    "    classifier = kNN(n_neighbors = best_parameters_br['n_neighbors'])\n",
+    ")\n",
+    "\n",
+    "#classifier_best_br.fit(encoded_train, Y_train)\n",
+    "#Y_train_pred_best_br = classifier_best_br.predict(encoded_train) # -- These 'predict()' steps can be time costly.\n",
+    "#Y_train_pred_best_array_br = Y_train_pred_best_br.toarray()          # Instead, load the predictions below\n",
+    "#Y_test_pred_best_br = classifier_best_br.predict(encoded_test)\n",
+    "#Y_test_pred_best_array_br = Y_test_pred_best_br.toarray()\n",
+    "\n",
+    "npzfile = np.load(\"kNN_bestModel_preds_encoded.npz\", allow_pickle = True)\n",
+    "Y_train_pred_best_array_br = npzfile[\"Y_train_pred_best_array_br_encoded\"]\n",
+    "Y_test_pred_best_array_br = npzfile[\"Y_test_pred_best_array_br_encoded\"]\n",
+    "Y_train_pred_proba_array = npzfile[\"Y_train_pred_proba_array_encoded\"]\n",
+    "Y_test_pred_proba_array = npzfile[\"Y_test_pred_proba_array_encoded\"]\n",
+    "\n",
+    "threshold_function = load(\"learned_threshold_function_encoded.joblib\")\n",
+    "\n",
+    "print (f\"Best parameters: The Hamming loss training data is {metrics.hamming_loss(Y_train, Y_train_pred_best_array_br):.3f}\")\n",
+    "print (f\"Best parameters: The Hamming loss test data is {metrics.hamming_loss(Y_test, Y_test_pred_best_array_br):.3f}\")\n",
+    "\n",
+    "# Learn a threshold function\n",
+    "#Y_train_pred_proba = classifier_best_br.predict_proba(encoded_train)\n",
+    "#Y_train_pred_proba_array = Y_train_pred_proba.toarray()\n",
+    "#Y_test_pred_proba = classifier_best_br.predict_proba(encoded_test)\n",
+    "#Y_test_pred_proba_array = Y_test_pred_proba.toarray()\n",
+    "\n",
+    "t_range = (0, 1)\n",
+    "\n",
+    "#test_labels_binary, threshold_function = predict_test_labels_binary(Y_train_pred_proba_array, Y_train, Y_test_pred_proba_array, t_range)\n",
+    "    # If loading pre-learned threshold function, skip ^^ and use the next line to generate predictions.\n",
+    "test_labels_binary = predict_labels_binary(Y_test_pred_proba_array, threshold_function)\n",
+    "print (f\"Best parameters with threshold function learning: Hamming loss Test set is {metrics.hamming_loss(Y_test, test_labels_binary)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['learned_threshold_function_encoded.joblib']"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## (CAUTION: DO NOT OVERWRITE EXISTING FILES) -- Save the kNN based best model predictions with & without a learned threshold\n",
+    "##                                               and save the learned threshold\n",
+    "outfile = \"kNN_bestModel_preds_encoded.npz\"\n",
+    "#np.savez_compressed(outfile, Y_train_pred_best_array_br_encoded = Y_train_pred_best_array_br,\n",
+    "#                             Y_test_pred_best_array_br_encoded = Y_test_pred_best_array_br,\n",
+    "#                             Y_train_pred_proba_array_encoded = Y_train_pred_proba_array,\n",
+    "#                             Y_test_pred_proba_array_encoded = Y_test_pred_proba_array,\n",
+    "#                             test_labels_binary_encoded = test_labels_binary)\n",
+    "\n",
+    "#outfile = \"learned_threshold_function_encoded.joblib\"\n",
+    "#dump(threshold_function, outfile, compress = 3) "
    ]
   },
   {
