Started encodings section

--- a/Binary Relevance Models/SVM Based/SVM_Based_Models.ipynb
+++ b/Binary Relevance Models/SVM Based/SVM_Based_Models.ipynb
@@ -257,6 +257,46 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Hamming loss for the training data is 0.007\n",
+      "The Hamming loss for the test data is 0.007\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Implement a binary relevance model using KNN classifiers (Naive approach to be compared with ML-KNN, later)\n",
+    "br_classifier = BinaryRelevance(\n",
+    "    classifier = SVC(C = 1, kernel = 'rbf')\n",
+    ")\n",
+    "\n",
+    "br_classifier.fit(encoded_train, Y_train)\n",
+    "\n",
+    "br_train_preds = br_classifier.predict(encoded_train).toarray() #-- Making predictions takes some time. \n",
+    "br_test_preds = br_classifier.predict(encoded_test).toarray()      #Instead, load the predictions from 'kNN_based_preds.npz', on next line.\n",
+    "\n",
+    "#npzfile = npzfile = np.load(\"kNN_based_preds.npz\", allow_pickle = True)\n",
+    "#br_train_preds = npzfile[\"br_train_preds\"]\n",
+    "#br_test_preds = npzfile[\"br_test_preds\"]\n",
+    "\n",
+    "print (f\"The Hamming loss for the training data is {metrics.hamming_loss(Y_train, br_train_preds):.3f}\")\n",
+    "print (f\"The Hamming loss for the test data is {metrics.hamming_loss(Y_test, br_test_preds):.3f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
