Started new notebook for FFNNs that include small grid search for network complexity

--- a/Deep Learning Models/FF Models/FF_Models_Training.ipynb
+++ b/Deep Learning Models/FF Models/FF_Models_Training.ipynb
@@ -376,6 +376,46 @@
     "#with open(\"Training Histories Layers GS/history_ce_FF_encoded_lr001.json\", \"w\") as outfile: \n",
     "#    history_3DF.to_json(outfile)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# BPMLL Models -- \"Novel\" Approach"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training on Dimension-Reduced Separable PC Vectors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Perform small grid search to choose number of layers\n",
+    "model_dict = {}\n",
+    "history_dict = {}\n",
+    "for num_layers in [3, 4, 5]:\n",
+    "    model = createModel(X_sepPCs_train, \n",
+    "                        num_layers, \n",
+    "                        X_sepPCs_train.shape[0], \n",
+    "                        Y_train.shape[1], \n",
+    "                        activation_func = 'relu', \n",
+    "                        output_activation = 'sigmoid', \n",
+    "                        loss_func = bp_mll_loss)\n",
+    "    \n",
+    "    tf.random.set_seed(123)\n",
+    "    model_history = model.fit(X_sepPCs_train, Y_train, epochs = 30,\n",
+    "                              validation_data = (X_sepPCs_test, Y_test), verbose = 0)\n",
+    "    name = f\"{num_layers}_layers\"\n",
+    "    model_dict[name] = model\n",
+    "    history_dict[name] = model_history"
+   ]
   }
  ],
  "metadata": {
